readme updated and logo added.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Write & Share Your Thoughts Using Blogify"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <link href="https://fonts.googleapis.com/css2?family=Charmonman&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <!--
